--- a/index.html
+++ b/index.html
@@ -14,22 +14,35 @@
     <header class="hero">
         <div class="container hero-grid">
             <div class="hero-left">
-                <h1>Rohit Kumar</h1>
-                <p class="subtitle">Data Science Student • Web Developer • Prompt-engineering & Cloud/Hadoop enthusiast</p>
+                <h1>SOFTWARE ENGINEER</h1>
+                <p class="topsubtitle">Data Science Student • Web Developer • Prompt-engineering & Cloud/Hadoop enthusiast</p>
                 <p class="lead">
                     Currently pursuing B.Tech (CSE) at Lovely Professional University (2022–2026), specializing in Data Science. I build data-driven projects, work with Hadoop ecosystem (HDFS / Hive / HBase), and craft advanced prompts for model reasoning.
                 </p>
 
-                <div class="cta-row">
-                    <a class="btn" href="#projects">See Projects</a>
-                    <a class="btn btn-outline" href="#contact">Contact</a>
-                </div>
+
 
                 <div class="quick-stats">
                     <div><strong>Degree</strong><span>B.Tech CSE (2022–2026)</span></div>
                     <div><strong>Specialization</strong><span>Data Science</span></div>
                     <div><strong>Focus</strong><span>Hadoop, Hive, HBase, Prompt Engineering</span></div>
+                </div><br>
+                <div class="cta-row">
+                    <a class="btn" href="#projects">See Projects</a>
+
+                    <a class="btn btn-outline" href="#contact">Contact</a>
                 </div>
+
+                <!-- CV Section -->
+                <section id="CV" class="section">
+                    <h3>Curriculum Vitae</h3>
+                    <p>Select which CV you’d like to view or download:</p>
+                    <div class="cv-buttons">
+                        <a href="sCV.pdf" target="_blank" class="btn">Specialized CV</a>
+                        <a href="CV1.pdf" target="_blank" class="btn btn-outline">General CV</a>
+                    </div>
+                </section>
+
             </div>
 
             <div class="hero-right">
