--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 </div>
 
                 <!-- CV Section -->
-                <section id="CV" class="section">
+                <!-- <section id="CV" class="section">
                     <h3>Curriculum Vitae</h3>
                     <p>Select which CV you’d like to view or download:</p>
                     <div class="cv-buttons">
                         <a href="sCV.pdf" target="_blank" class="btn">Specialized CV</a>
                         <a href="CV1.pdf" target="_blank" class="btn btn-outline">General CV</a>
                     </div>
-                </section>
+                </section> -->
 
             </div>
 
@@ -66,6 +66,14 @@
                                 <i class="fab fa-linkedin"></i>
                             </a>
                         </div>
+                        <section id="CV" class="section">
+                            <!-- <h3>Curriculum Vitae</h3>
+                            <p>Select which CV you’d like to view or download:</p> -->
+                            <div class="cv-buttons">
+                                <a href="sCV.pdf" target="_blank" class="btn">Specialized CV</a>
+                                <a href="CV1.pdf" target="_blank" class="btn btn-outline">General CV</a>
+                            </div>
+                        </section>
 
 
                     </ul>
