--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Rohit Kumar — Portfolio</title>
+    <title>Rohitxeel</title>
 
     <meta name="description" content="Rohit Kumar — Data Science student & web developer (B.Tech CSE, Lovely Professional University)" />
     <link rel="stylesheet" href="style.css" />
@@ -179,3 +179,4 @@
 </body>
 
 </html>
+
