--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <footer class="footer">
         <div class="container">
-            <small>© Rohit Kumar — B.Tech CSE, Lovely Professional University</small>
+            <small>© Rohit Kumar — B.Tech CSE, Lovely Professional University <br>Managed/Created by Rohitxeel</small>
         </div>
     </footer>
 
@@ -179,4 +179,5 @@
 </body>
 
 </html>
+
 
